src/ui/lidarr_ui/root_folders/snapshots/managarr__ui__lidarr_ui__root_folders__add_root_folder_ui__add_root_folder_ui_tests__tests__snapshot_tests__add_root_folder_AddRootFolderSelectMonitorNewItems.snap
---
source: src/ui/lidarr_ui/root_folders/add_root_folder_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────────────  Add Root Folder  ───────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Name: │Test Root Folder                                 │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Path: │/nfs/music                                       │    │                              
                            │                                     ╭───────────────────────────────╮──────────────────────────────╯    │                              
                            │                                     │All Albums                     │──────────────────────────────╮    │                              
                            │                                     │No New Albums                  │                            ▼ │    │                              
                            │                                     │New Albums                     │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                              Monitor│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                 Qual│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                Metad│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     ╰───────────────────────────────╯                              │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
